--- a/index.html
+++ b/index.html
@@ -257,15 +257,13 @@
 								class="rounded"> </div>
 						<div class="col-md-6 col-md-pull-6 display_table_cell_md">
 							<h2 class="section_header" style="color:#72ab4c;">Our Management</h2>
-							<p class="highlight bottommargin_20" style="">
-								<span style="color:#72ab4c;"><strong>Bienestar</strong></span>
-								is well known Delhi based leading proprietary company established in 2018,
-								that trades in various medical devices and equipment Company has broad mission and
-								vision of delivering quality products at affordable cost
-								to the end users.
-								At present Bienestar has associated partnership with word-wide medicals devices company
-								name as Ashai, Medtronic, Abbott, Terumo, Cordis, Jhonson&Jhonson, Translumina, Kanika,
-								Boston, Romsons, Philips, GE, Mindray, Transasia , Ambygo, etc.
+							<p>
+								<strong style="color:#72ab4c;">Managing Director:</strong>Mr. Rizwan Ahmad Khan, MBA<br>
+								<strong style="color:#72ab4c;">CEO:</strong>Mr. Faizan Ahmad khan (PG)<br>
+								<strong style="color:#72ab4c;">CFO:</strong> Sabeeha Khan (PG)<br>
+								<strong style="color:#72ab4c;">Marketing Head:</strong> Adnan Khan<br>
+								<strong style="color:#72ab4c;">H.R. Head: </strong> Banketesh khadge <br>
+								<strong style="color:#72ab4c;">CTO:</strong> Zeeshan Ahmad khan (Civil Engineer)
 							</p>
 						</div>
 					</div>
